# hermes-feishu-cardmsg

./: .gitignore  LICENSE  README.md  feishu_card_send.py  pyproject.toml
docs/: gateway_integration.md
feishu_card_builder/: __init__.py  __main__.py  builder.py  cli.py  elements.py  parser.py  status.py
patches/: 0001-feat-gateway-feishu-card-message.patch
scripts/: apply-patch.sh
